2012-02-12  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-parse-flags): Parse correctly when we have mixed
	QRESYNC/FETCH output.

2012-02-11  Glenn Morris  <rgm@gnu.org>

	* sieve-manage.el (sieve-manage-default-stream):
	* shr.el (shr):
	* nnir.el (nnir-ignored-newsgroups, nnir-summary-line-format)
	(nnir-retrieve-headers-override-function)
	(nnir-imap-default-search-key, nnir-notmuch-program)
	(nnir-notmuch-additional-switches, nnir-notmuch-remove-prefix)
	(nnir-method-default-engines):
	* message.el (message-cite-reply-position):
	* gssapi.el (gssapi-program):
	* gravatar.el (gravatar):
	* gnus-sum.el (gnus-refer-thread-use-nnir):
	* gnus-registry.el (gnus-registry-unfollowed-addresses)
	(gnus-registry-max-pruned-entries):
	* gnus-picon.el (gnus-picon-inhibit-top-level-domains):
	* gnus-int.el (gnus-after-set-mark-hook)
	(gnus-before-update-mark-hook):
	* gnus-async.el (gnus-async-post-fetch-function):
	* auth-source.el (auth-source-cache-expiry):
	Add missing :version tags to new defcustoms and defgroups.

2012-02-10  Lars Ingebrigtsen  <larsi@gnus.org>

	* message.el (message-default-send-mail-function): Made into own
	function for reuse by emacsbug.el.

2012-02-09  Juanma Barranquero  <lekktu@gmail.com>

	* gnus.el (gnus-method-ephemeral-p): Move after declaration of defsubst
	`gnus-sloppily-equal-method-parameters' to avoid a warning.

2012-02-09  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-msg-mail): Use `message-mail' if Gnus isn't
	running.

	* nnimap.el (nnimap-wait-for-response): Minor fixup of message string.

	* gnus.el (gnus-server-extend-method): Don't add an -address component
	if the method already has one (bug#9676).

2012-02-08  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-insert-old-articles): Use a default instead
	of an initial-input for consistency (bug#10757).

	* dgnushack.el: Fix XEmacs compilation warning.

	* shr.el: Inhibit getting and sending cookies when fetching pictures.
