@@ -1,5 +1,8 @@
 2012-02-12  Lars Ingebrigtsen  <larsi@gnus.org>
 
+	* gnus-art.el (gnus-stop-downloads): Stop `url-queue' downloads on
+	group exit.
+
 	* nnimap.el (nnimap-parse-flags): Parse correctly when we have mixed
 	QRESYNC/FETCH output.
 
